--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
 		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/badge": "^2.0.32",
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/dropdown": "^2.1.31",
-		"@nextui-org/input": "2.2.5",
+		"@nextui-org/input": "^2.2.5",
 		"@nextui-org/kbd": "2.0.34",
 		"@nextui-org/link": "2.0.35",
 		"@nextui-org/listbox": "2.1.27",
+		"@nextui-org/modal": "^2.0.41",
 		"@nextui-org/navbar": "2.0.37",
+		"@nextui-org/select": "^2.2.7",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
@@ -26,13 +29,18 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@tanstack/react-query": "^5.60.6",
+		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-hook-form": "^7.53.2",
+		"sonner": "^1.7.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
