--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
 		"@nextui-org/avatar": "^2.0.33",
 		"@nextui-org/badge": "^2.0.32",
 		"@nextui-org/button": "2.0.38",
+		"@nextui-org/chip": "^2.0.33",
 		"@nextui-org/code": "2.0.33",
 		"@nextui-org/dropdown": "^2.1.31",
 		"@nextui-org/input": "^2.2.5",
 		"@nextui-org/kbd": "2.0.34",
 		"@nextui-org/link": "2.0.35",
-		"@nextui-org/listbox": "2.1.27",
+		"@nextui-org/listbox": "^2.1.27",
 		"@nextui-org/modal": "^2.0.41",
 		"@nextui-org/navbar": "2.0.37",
+		"@nextui-org/pagination": "^2.0.36",
+		"@nextui-org/popover": "^2.1.29",
 		"@nextui-org/select": "^2.2.7",
 		"@nextui-org/snippet": "2.0.43",
+		"@nextui-org/spinner": "^2.0.34",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
+		"@nextui-org/table": "^2.0.40",
 		"@nextui-org/tabs": "^2.0.37",
 		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/user": "^2.0.34",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@tanstack/react-query": "^5.60.6",
