--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@nextui-org/table": "^2.0.40",
 		"@nextui-org/tabs": "^2.0.37",
 		"@nextui-org/theme": "2.2.11",
+		"@nextui-org/tooltip": "^2.0.41",
 		"@nextui-org/user": "^2.0.34",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
@@ -46,6 +47,7 @@
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.2",
 		"sonner": "^1.7.0",
+		"sweetalert2": "^11.14.5",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
