--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@nextui-org/pagination": "^2.0.36",
 		"@nextui-org/popover": "^2.1.29",
 		"@nextui-org/select": "^2.2.7",
+		"@nextui-org/skeleton": "^2.0.32",
 		"@nextui-org/snippet": "2.0.43",
 		"@nextui-org/spinner": "^2.0.34",
 		"@nextui-org/switch": "2.0.34",
