--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jodit": "^4.2.43",
+		"jodit-react": "^4.1.2",
 		"jwt-decode": "^4.0.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
