Manage Accessories updated

--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"jodit": "^4.2.43",
-		"jodit-react": "^4.1.2",
 		"jwt-decode": "^4.0.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"quill": "^2.0.3",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.2",
+		"react-quill": "^2.0.0",
 		"sonner": "^1.7.0",
 		"sweetalert2": "^11.14.5",
 		"zod": "^3.23.8"
