--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@tanstack/react-query": "^5.60.6",
 		"axios": "^1.7.7",
 		"clsx": "2.1.1",
+		"dayjs": "^1.11.13",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
