--- a/package.json
+++ b/package.json
@@ -10,38 +10,42 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.1",
-		"@nextui-org/avatar": "^2.0.33",
-		"@nextui-org/badge": "^2.0.32",
-		"@nextui-org/button": "2.0.38",
-		"@nextui-org/chip": "^2.0.33",
-		"@nextui-org/code": "2.0.33",
-		"@nextui-org/dropdown": "^2.1.31",
-		"@nextui-org/input": "^2.2.5",
-		"@nextui-org/kbd": "2.0.34",
-		"@nextui-org/link": "2.0.35",
-		"@nextui-org/listbox": "^2.1.27",
-		"@nextui-org/modal": "^2.0.41",
-		"@nextui-org/navbar": "2.0.37",
-		"@nextui-org/pagination": "^2.0.36",
-		"@nextui-org/popover": "^2.1.29",
-		"@nextui-org/select": "^2.2.7",
-		"@nextui-org/skeleton": "^2.0.32",
-		"@nextui-org/snippet": "2.0.43",
-		"@nextui-org/spinner": "^2.0.34",
-		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "2.2.6",
-		"@nextui-org/table": "^2.0.40",
-		"@nextui-org/tabs": "^2.0.37",
-		"@nextui-org/theme": "2.2.11",
-		"@nextui-org/tooltip": "^2.0.41",
-		"@nextui-org/user": "^2.0.34",
+		"@internationalized/date": "^3.6.0",
+		"@nextui-org/avatar": "^2.2.6",
+		"@nextui-org/badge": "^2.2.5",
+		"@nextui-org/button": "^2.2.9",
+		"@nextui-org/card": "^2.2.9",
+		"@nextui-org/chip": "^2.2.6",
+		"@nextui-org/code": "^2.2.6",
+		"@nextui-org/date-picker": "^2.3.9",
+		"@nextui-org/divider": "^2.2.5",
+		"@nextui-org/dropdown": "^2.3.9",
+		"@nextui-org/input": "^2.4.8",
+		"@nextui-org/kbd": "^2.2.6",
+		"@nextui-org/link": "^2.2.7",
+		"@nextui-org/listbox": "^2.3.9",
+		"@nextui-org/modal": "^2.2.7",
+		"@nextui-org/navbar": "^2.2.8",
+		"@nextui-org/pagination": "^2.2.8",
+		"@nextui-org/popover": "^2.3.9",
+		"@nextui-org/select": "^2.4.9",
+		"@nextui-org/skeleton": "^2.2.5",
+		"@nextui-org/snippet": "^2.2.10",
+		"@nextui-org/spinner": "^2.2.6",
+		"@nextui-org/switch": "^2.2.8",
+		"@nextui-org/system": "^2.4.6",
+		"@nextui-org/table": "^2.2.8",
+		"@nextui-org/tabs": "^2.2.7",
+		"@nextui-org/theme": "^2.4.5",
+		"@nextui-org/tooltip": "^2.2.7",
+		"@nextui-org/user": "^2.2.6",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@tanstack/react-query": "^5.60.6",
 		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"dayjs": "^1.11.13",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "^11.17.0",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
 		"next": "14.2.4",
