--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@heroui/checkbox": "^2.3.8",
 		"@hookform/resolvers": "^3.9.1",
 		"@internationalized/date": "^3.6.0",
 		"@nextui-org/avatar": "^2.2.6",
