--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@heroui/checkbox": "^2.3.8",
+		"@heroui/image": "^2.2.6",
 		"@hookform/resolvers": "^3.9.1",
 		"@internationalized/date": "^3.6.0",
 		"@nextui-org/avatar": "^2.2.6",
