--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
 		"@nextui-org/user": "^2.2.6",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
-		"@tanstack/react-query": "^5.60.6",
+		"@tanstack/query-sync-storage-persister": "^5.64.2",
+		"@tanstack/react-query": "^5.64.2",
+		"@tanstack/react-query-persist-client": "^5.64.2",
 		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"dayjs": "^1.11.13",
