--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"framer-motion": "^11.17.0",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
+		"lodash.debounce": "^4.0.8",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"quill": "^2.0.3",
