--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
 		"lodash.debounce": "^4.0.8",
-		"next": "14.2.4",
+		"next": "^15.1.6",
 		"next-themes": "^0.2.1",
 		"quill": "^2.0.3",
 		"react": "18.3.1",
