--- a/package.json
+++ b/package.json
@@ -1,92 +1,86 @@
 {
-	"name": "next-app-template",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbo",
-		"build": "next build",
-		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
-	},
-	"dependencies": {
-		"@heroui/checkbox": "^2.3.8",
-		"@heroui/date-input": "^2.3.9",
-		"@heroui/image": "^2.2.6",
-		"@hookform/resolvers": "^3.9.1",
-		"@internationalized/date": "^3.6.0",
-		"@nextui-org/avatar": "^2.2.6",
-		"@nextui-org/badge": "^2.2.5",
-		"@nextui-org/button": "^2.2.9",
-		"@nextui-org/card": "^2.2.9",
-		"@nextui-org/chip": "^2.2.6",
-		"@nextui-org/code": "^2.2.6",
-		"@nextui-org/date-picker": "^2.3.9",
-		"@nextui-org/divider": "^2.2.5",
-		"@nextui-org/dropdown": "^2.3.9",
-		"@nextui-org/input": "^2.4.8",
-		"@nextui-org/kbd": "^2.2.6",
-		"@nextui-org/link": "^2.2.7",
-		"@nextui-org/listbox": "^2.3.9",
-		"@nextui-org/modal": "^2.2.7",
-		"@nextui-org/navbar": "^2.2.8",
-		"@nextui-org/pagination": "^2.2.8",
-		"@nextui-org/popover": "^2.3.9",
-		"@nextui-org/select": "^2.4.9",
-		"@nextui-org/skeleton": "^2.2.5",
-		"@nextui-org/snippet": "^2.2.10",
-		"@nextui-org/spinner": "^2.2.6",
-		"@nextui-org/switch": "^2.2.8",
-		"@nextui-org/system": "^2.4.6",
-		"@nextui-org/table": "^2.2.8",
-		"@nextui-org/tabs": "^2.2.7",
-		"@nextui-org/theme": "^2.4.5",
-		"@nextui-org/tooltip": "^2.2.7",
-		"@nextui-org/user": "^2.2.6",
-		"@react-aria/ssr": "3.9.4",
-		"@react-aria/visually-hidden": "3.8.12",
-		"@tanstack/query-sync-storage-persister": "^5.64.2",
-		"@tanstack/react-query": "^5.64.2",
-		"@tanstack/react-query-persist-client": "^5.64.2",
-		"axios": "^1.7.7",
-		"clsx": "2.1.1",
-		"dayjs": "^1.11.13",
-		"framer-motion": "^11.17.0",
-		"intl-messageformat": "^10.5.0",
-		"jwt-decode": "^4.0.0",
-		"lodash.debounce": "^4.0.8",
-		"next": "^15.1.6",
-		"next-themes": "^0.2.1",
-		"quill": "^2.0.3",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-hook-form": "^7.53.2",
-		"react-quill": "^2.0.0",
-		"react-quill-v2": "^2.0.2",
-		"sonner": "^1.7.0",
-		"sweetalert2": "^11.14.5",
-		"zod": "^3.23.8"
-	},
-	"devDependencies": {
-		"@types/node": "20.5.7",
-		"@types/react": "18.3.3",
-		"@types/react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "8.11.0",
-		"@typescript-eslint/parser": "8.11.0",
-		"autoprefixer": "10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "14.2.1",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "5.2.1",
-		"eslint-plugin-react": "^7.23.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-unused-imports": "4.1.4",
-		"postcss": "8.4.38",
-		"prettier": "3.3.3",
-		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.3",
-		"typescript": "5.6.3"
-	}
+ "name": "next-app-template",
+ "version": "0.0.1",
+ "private": true,
+ "scripts": {
+  "dev": "next dev --turbo",
+  "build": "next build",
+  "start": "next start",
+  "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+ },
+ "dependencies": {
+  "@heroui/checkbox": "2.3.18",
+  "@heroui/date-input": "2.3.18",
+  "@heroui/image": "2.2.12",
+  "@hookform/resolvers": "^3.9.1",
+  "@internationalized/date": "^3.6.0",
+  "@heroui/avatar": "2.2.15",
+  "@heroui/badge": "2.2.12",
+  "@heroui/button": "2.2.19",
+  "@heroui/card": "2.2.18",
+  "@heroui/chip": "2.2.15",
+  "@heroui/code": "2.2.14",
+  "@heroui/date-picker": "2.3.19",
+  "@heroui/divider": "2.2.13",
+  "@heroui/dropdown": "2.3.19",
+  "@heroui/input": "2.4.19",
+  "@heroui/kbd": "2.2.15",
+  "@heroui/link": "2.2.16",
+  "@heroui/listbox": "2.3.18",
+  "@heroui/modal": "2.2.16",
+  "@heroui/navbar": "2.2.17",
+  "@heroui/pagination": "2.2.17",
+  "@heroui/popover": "2.3.19",
+  "@heroui/select": "2.4.19",
+  "@heroui/skeleton": "2.2.12",
+  "@heroui/snippet": "2.2.20",
+  "@heroui/spinner": "2.2.16",
+  "@heroui/switch": "2.2.17",
+  "@heroui/system": "2.4.15",
+  "@heroui/table": "2.2.18",
+  "@heroui/tabs": "2.2.16",
+  "@heroui/theme": "2.4.15",
+  "@heroui/tooltip": "2.2.16",
+  "@heroui/user": "2.2.15",
+  "@react-aria/ssr": "3.9.4",
+  "@react-aria/visually-hidden": "3.8.12",
+  "@tanstack/query-sync-storage-persister": "^5.64.2",
+  "@tanstack/react-query": "^5.64.2",
+  "@tanstack/react-query-persist-client": "^5.64.2",
+  "axios": "^1.7.7",
+  "clsx": "2.1.1",
+  "dayjs": "^1.11.13",
+  "framer-motion": "^11.17.0",
+  "intl-messageformat": "^10.5.0",
+  "jwt-decode": "^4.0.0",
+  "lodash.debounce": "^4.0.8",
+  "next": "^15.1.6",
+  "react-quill-v2": "^2.0.2",
+  "sonner": "^1.7.0",
+  "sweetalert2": "^11.14.5",
+  "zod": "^3.23.8"
+ },
+ "devDependencies": {
+  "@types/node": "20.5.7",
+  "@types/react": "18.3.3",
+  "@types/react-dom": "18.3.0",
+  "@typescript-eslint/eslint-plugin": "8.11.0",
+  "@typescript-eslint/parser": "8.11.0",
+  "autoprefixer": "10.4.19",
+  "eslint": "^8.57.0",
+  "eslint-config-next": "14.2.1",
+  "eslint-config-prettier": "9.1.0",
+  "eslint-plugin-import": "^2.26.0",
+  "eslint-plugin-jsx-a11y": "^6.4.1",
+  "eslint-plugin-node": "^11.1.0",
+  "eslint-plugin-prettier": "5.2.1",
+  "eslint-plugin-react": "^7.23.2",
+  "eslint-plugin-react-hooks": "^4.6.0",
+  "eslint-plugin-unused-imports": "4.1.4",
+  "postcss": "8.4.38",
+  "prettier": "3.3.3",
+  "tailwind-variants": "0.1.20",
+  "tailwindcss": "3.4.3",
+  "typescript": "5.6.3"
+ }
 }
