--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
   "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
  },
  "dependencies": {
-  "@heroui/checkbox": "2.3.18",
-  "@heroui/date-input": "2.3.18",
-  "@heroui/image": "2.2.12",
-  "@hookform/resolvers": "^3.9.1",
-  "@internationalized/date": "^3.6.0",
   "@heroui/avatar": "2.2.15",
   "@heroui/badge": "2.2.12",
   "@heroui/button": "2.2.19",
   "@heroui/card": "2.2.18",
+  "@heroui/checkbox": "2.3.18",
   "@heroui/chip": "2.2.15",
   "@heroui/code": "2.2.14",
+  "@heroui/date-input": "2.3.18",
   "@heroui/date-picker": "2.3.19",
   "@heroui/divider": "2.2.13",
   "@heroui/dropdown": "2.3.19",
+  "@heroui/image": "2.2.12",
   "@heroui/input": "2.4.19",
   "@heroui/kbd": "2.2.15",
   "@heroui/link": "2.2.16",
@@ -42,6 +40,8 @@
   "@heroui/theme": "2.4.15",
   "@heroui/tooltip": "2.2.16",
   "@heroui/user": "2.2.15",
+  "@hookform/resolvers": "^3.9.1",
+  "@internationalized/date": "^3.6.0",
   "@react-aria/ssr": "3.9.4",
   "@react-aria/visually-hidden": "3.8.12",
   "@tanstack/query-sync-storage-persister": "^5.64.2",
@@ -56,6 +56,7 @@
   "lodash.debounce": "^4.0.8",
   "next": "^15.1.6",
   "react-quill-v2": "^2.0.2",
+  "react-to-print": "^3.1.0",
   "sonner": "^1.7.0",
   "sweetalert2": "^11.14.5",
   "zod": "^3.23.8"
