--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "@tanstack/query-sync-storage-persister": "^5.64.2",
   "@tanstack/react-query": "^5.64.2",
   "@tanstack/react-query-persist-client": "^5.64.2",
+  "@types/quill": "^2.0.14",
   "axios": "^1.7.7",
   "clsx": "2.1.1",
   "dayjs": "^1.11.13",
@@ -55,6 +56,8 @@
   "jwt-decode": "^4.0.0",
   "lodash.debounce": "^4.0.8",
   "next": "^15.1.6",
+  "quill": "^2.0.3",
+  "react-quill": "^2.0.0",
   "react-quill-v2": "^2.0.2",
   "react-to-print": "^3.1.0",
   "sonner": "^1.7.0",
