--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "lodash.debounce": "^4.0.8",
   "next": "^15.1.6",
   "quill": "^2.0.3",
+  "react-hook-form": "^7.62.0",
   "react-quill": "^2.0.0",
   "react-quill-new": "^3.6.0",
   "react-to-print": "^3.1.0",
